# procedural-buildings

./: .gitignore  CMakeLists.txt  Context.cpp  Context.h  Grammar.cpp  Grammar.h  I.cpp  I.h  Mesh.cpp  Mesh.h  NonTerminalShape.cpp  NonTerminalShape.h  PLYWriter.cpp  PLYWriter.h  Pop.cpp  Pop.h  Push.cpp  Push.h  R.cpp  R.h  README.md  Rule.cpp  Rule.h  S.cpp  S.h  Scope.cpp  Scope.h  Shape.cpp  Shape.h  T.cpp  T.h  main.cpp  rules.txt  test.grammar
samples/: grammar_samples
